<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/locationsWeatherList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:paddingVertical="@dimen/BU3"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/progressView"
        android:layout_width="@dimen/animated_progress"
        android:layout_height="@dimen/animated_progress"
        android:layout_marginTop="@dimen/BU5"
        android:background="@drawable/round_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            style="@android:style/Widget.DeviceDefault.ProgressBar.Small"
            android:layout_width="@dimen/progress"
            android:layout_height="@dimen/progress"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="visible" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
